--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit
-cohere
-scikit-learn
-numpy
-speechrecognition
-streamlit-mic-recorder
+streamlit==1.45.1
+cohere==5.15.0
+PyPDF2==3.0.1
+sentence-transformers==2.7.0
+scikit-learn==1.6.1
+numpy==1.26.4
+pandas==2.2.2
+
