--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit==1.45.1
 cohere==5.15.0
-sentence-transformers==2.7.0
 PyPDF2==3.0.1
+python-docx==1.1.0
+streamlit-option-menu==0.3.6
+pandas==2.2.3
 numpy==1.26.4
-torch==2.2.2
-streamlit-mic-recorder==0.0.8
+requests==2.32.3
+watchdog==6.0.0
