--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==1.24.4
+numpy>=1.26.0,<2.0.0
 streamlit==1.45.1
 cohere==5.15.0
 scikit-learn==1.6.1
@@ -12,5 +12,5 @@ soundfile==0.12.1
 python-dotenv==1.0.1
 torchaudio==2.2.1
 torch==2.2.1
-git+https://github.com/openai/whisper.git
+openai-whisper @ git+https://github.com/openai/whisper.git
 
